use streamElements logo as tab favicon. change tab title to Hero Builder. fix layout issues. fix isActive styling on Hero image on View Results component. Adjust font sizes and misc spacing when in mobile view. add a helper functions for calculating optimal HeroSelection grid sizes.

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 #root {
     background-color: #fafafa !important;
+    height: 100vh;
 }
 
 body {
     background-color: white !important;
-    height: 100vh !important;
     margin: 0;
 }
